--- a/templates/sensor.html
+++ b/templates/sensor.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Sensor</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{{ url_for('static', filename='estilos.css') }}" rel="stylesheet">
+
 </head>
 <body>
+<div class="center-div">
 
+
+</div>
 </body>
+<script src="https://code.jquery.com/jquery-3.4.0.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+<script src="{{ url_for('static', filename='ajax.js') }}"></script>
+
 </html>
